HTML and CSS files updated

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Navigation Bar -->
     <nav id="navbar">
         <div id="logo">
-            <img src="images/foodlogo.jpg" alt="MyOnlineMeal Logo">
+            <img src="Images/foodlogo.jpg" alt="MyOnlineMeal Logo">
         </div>
         <ul>
             <li class="item"><a href="#">Home</a></li>
@@ -42,61 +42,61 @@
 
         <div id="products">
             <div class="box">
-                <img src="images/hot and cold beverages.jpg" alt="Hot and Cold Beverages">
+                <img src="Images/hot and cold beverages.jpg" alt="Hot and Cold Beverages">
                 <h3 class="h-secondary center">Hot & Cold Beverages</h3>
             </div>
             <div class="box">
-                <img src="images/ice creams.jpg" alt="Ice Cream">
+                <img src="Images/ice creams.jpg" alt="Ice Cream">
                 <h3 class="h-secondary center">Ice Creams</h3>
             </div>
             <div class="box">
-                <img src="images/juices.jpg" alt="Juices">
+                <img src="Images/juices.jpg" alt="Juices">
                 <h3 class="h-secondary center">Fresh Juices</h3>
             </div>
             <div class="box">
-                <img src="images/milkshakes.jpg" alt="Milkshakes">
+                <img src="Images/milkshakes.jpg" alt="Milkshakes">
                 <h3 class="h-secondary center">Milkshakes</h3>
             </div>
         </div>
 
         <div id="products">
             <div class="box">
-                <img src="images/sandwiches.jpg" alt="Sandwiches">
+                <img src="Images/sandwiches.jpg" alt="Sandwiches">
                 <h3 class="h-secondary center">Sandwiches</h3>
             </div>
             <div class="box">
-                <img src="images/short food.jpg" alt="Short Foods">
+                <img src="Images/short food.jpg" alt="Short Foods">
                 <h3 class="h-secondary center">Quick Bites</h3>
             </div>
             <div class="box">
-                <img src="images/soups.jpg" alt="Soups">
+                <img src="Images/soups.jpg" alt="Soups">
                 <h3 class="h-secondary center">Soups</h3>
             </div>
             <div class="box">
-                <img src="images/dosa items.jpg" alt="Dosa Items">
+                <img src="Images/dosa items.jpg" alt="Dosa Items">
                 <h3 class="h-secondary center">South Indian Dosa</h3>
             </div>
             <div class="box">
-                <img src="images/rice items.jpg" alt="Rice Dishes">
+                <img src="Images/rice items.jpg" alt="Rice Dishes">
                 <h3 class="h-secondary center">Rice Varieties</h3>
             </div>
         </div>
 
         <div id="products">
             <div class="box">
-                <img src="images/chinese special.jpg" alt="Chinese Food">
+                <img src="Images/chinese special.jpg" alt="Chinese Food">
                 <h3 class="h-secondary center">Chinese Specials</h3>
             </div>
             <div class="box">
-                <img src="images/chicken items.jpg" alt="Chicken Dishes">
+                <img src="Images/chicken items.jpg" alt="Chicken Dishes">
                 <h3 class="h-secondary center">Chicken Dishes</h3>
             </div>
             <div class="box">
-                <img src="images/egg dishes.jpg" alt="Egg Dishes">
+                <img src="Images/egg dishes.jpg" alt="Egg Dishes">
                 <h3 class="h-secondary center">Egg Recipes</h3>
             </div>
             <div class="box">
-                <img src="images/indian breads.jpg" alt="Indian Breads">
+                <img src="Images/indian breads.jpg" alt="Indian Breads">
                 <h3 class="h-secondary center">Indian Breads</h3>
             </div>
         </div>
@@ -107,17 +107,17 @@
         <h1 class="h-primary center">Our Services</h1>
         <div id="services">
             <div class="box">
-                <img src="images/pizza.jpg" alt="Food Catering">
+                <img src="Images/pizza.jpg" alt="Food Catering">
                 <h2 class="h-secondary center">Event Catering</h2>
                 <p class="center">We provide catering for parties, weddings, and corporate events. Choose from a customizable menu with on-time delivery and setup.</p>
             </div>
             <div class="box">
-                <img src="images/food bulk.jpg" alt="Bulk Ordering">
+                <img src="Images/food bulk.jpg" alt="Bulk Ordering">
                 <h2 class="h-secondary center">Bulk Ordering</h2>
                 <p class="center">Get discounted prices and quick delivery when you order food in bulk for colleges, hostels, and events.</p>
             </div>
             <div class="box">
-                <img src="images/food delivery.png" alt="Home Delivery">
+                <img src="Images/food delivery.png" alt="Home Delivery">
                 <h2 class="h-secondary center">Fast Delivery</h2>
                 <p class="center">Order your favorite food from nearby restaurants and get it delivered hot and fresh within 30 minutes.</p>
             </div>
@@ -129,19 +129,19 @@
         <h1 class="h-primary center">Our Trusted Partners</h1>
         <div id="clients">
             <div class="client-item">
-                <img src="images/logo1.jpg" alt="Client 1">
+                <img src="Images/logo1.jpg" alt="Client 1">
             </div>
             <div class="client-item">
-                <img src="images/logo2.png" alt="Client 2">
+                <img src="Images/logo2.png" alt="Client 2">
             </div>
             <div class="client-item">
-                <img src="images/logo3.png" alt="Client 3">
+                <img src="Images/logo3.png" alt="Client 3">
             </div>
             <div class="client-item">
-                <img src="images/logo4.jpg" alt="Client 4">
+                <img src="Images/logo4.jpg" alt="Client 4">
             </div>
             <div class="client-item">
-                <img src="images/logo5.png" alt="Client 5">
+                <img src="Images/logo5.png" alt="Client 5">
             </div>
         </div>
     </section>
@@ -175,7 +175,7 @@
     <!-- Footer -->
     <footer>
         <div class="center">
-            &copy; 2025 MyOnlineMeal.com — All Rights Reserved
+            &copy; 2023 MyOnlineMeal.com — All Rights Reserved
         </div>
     </footer>
 </body>
